{
  "version": 4,
  "terraform_version": "1.9.3",
  "serial": 30,
  "lineage": "b3859aeb-53df-f567-ace0-76db15319c2e",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02124432aee7fdd83",
            "arn": "arn:aws:ec2:ap-south-1:825765392239:elastic-ip/eipalloc-02124432aee7fdd83",
            "association_id": "eipassoc-0caec609c5a8e9a33",
            "domain": "vpc",
            "id": "eipalloc-02124432aee7fdd83",
            "network_border_group": "ap-south-1",
            "network_interface": "eni-01c6b82d94d20adf8",
            "private_dns": "ip-10-0-1-72.ap-south-1.compute.internal",
            "private_ip": "10.0.1.72",
            "public_dns": "ec2-13-202-223-25.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.202.223.25",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:825765392239:internet-gateway/igw-02d459ad2d7e9c9e5",
            "id": "igw-02d459ad2d7e9c9e5",
            "owner_id": "825765392239",
            "tags": {
              "Name": "my-firs-tf-vpc-igw"
            },
            "tags_all": {
              "Name": "my-firs-tf-vpc-igw"
            },
            "vpc_id": "vpc-0ad5bd20a86dc04e6"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02124432aee7fdd83",
            "association_id": "eipassoc-0caec609c5a8e9a33",
            "connectivity_type": "public",
            "id": "nat-0279b19a4b65b2c3d",
            "network_interface_id": "eni-01c6b82d94d20adf8",
            "private_ip": "10.0.1.72",
            "public_ip": "13.202.223.25",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-07e37bfdd3726bdfb",
            "tags": {
              "Name": "my-firs-tf-vpc-nat"
            },
            "tags_all": {
              "Name": "my-firs-tf-vpc-nat"
            }
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_subnet.public_subnets",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:825765392239:route-table/rtb-012d4e3054194fc22",
            "id": "rtb-012d4e3054194fc22",
            "owner_id": "825765392239",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0279b19a4b65b2c3d",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "my-firs-tf-vpc-private-rt"
            },
            "tags_all": {
              "Name": "my-firs-tf-vpc-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ad5bd20a86dc04e6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_nat_gateway.nat",
            "aws_subnet.public_subnets",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:825765392239:route-table/rtb-066384a95e70966ac",
            "id": "rtb-066384a95e70966ac",
            "owner_id": "825765392239",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-02d459ad2d7e9c9e5",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "my-firs-tf-vpc-public-rt"
            },
            "tags_all": {
              "Name": "my-firs-tf-vpc-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ad5bd20a86dc04e6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0747f9e1afa514a05",
            "route_table_id": "rtb-012d4e3054194fc22",
            "subnet_id": "subnet-06fd6c826d032ac4f"
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_nat_gateway.nat",
            "aws_route_table.private_rt",
            "aws_subnet.private_subnets",
            "aws_subnet.public_subnets",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fb05b65a91865c01",
            "route_table_id": "rtb-012d4e3054194fc22",
            "subnet_id": "subnet-0a70fda667d930493"
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_nat_gateway.nat",
            "aws_route_table.private_rt",
            "aws_subnet.private_subnets",
            "aws_subnet.public_subnets",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03c56597126cbc395",
            "route_table_id": "rtb-066384a95e70966ac",
            "subnet_id": "subnet-07e37bfdd3726bdfb"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_rt",
            "aws_subnet.public_subnets",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-096aa856d9e2b5615",
            "route_table_id": "rtb-066384a95e70966ac",
            "subnet_id": "subnet-07a017fe1f072c227"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_rt",
            "aws_subnet.public_subnets",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:825765392239:subnet/subnet-06fd6c826d032ac4f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06fd6c826d032ac4f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "825765392239",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "my-firs-tf-vpc-private-1"
            },
            "tags_all": {
              "Name": "my-firs-tf-vpc-private-1"
            },
            "vpc_id": "vpc-0ad5bd20a86dc04e6"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:825765392239:subnet/subnet-0a70fda667d930493",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a70fda667d930493",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "825765392239",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "my-firs-tf-vpc-private-2"
            },
            "tags_all": {
              "Name": "my-firs-tf-vpc-private-2"
            },
            "vpc_id": "vpc-0ad5bd20a86dc04e6"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:825765392239:subnet/subnet-07e37bfdd3726bdfb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07e37bfdd3726bdfb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "825765392239",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "my-firs-tf-vpc-public-1"
            },
            "tags_all": {
              "Name": "my-firs-tf-vpc-public-1"
            },
            "vpc_id": "vpc-0ad5bd20a86dc04e6"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:825765392239:subnet/subnet-07a017fe1f072c227",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07a017fe1f072c227",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "825765392239",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "my-firs-tf-vpc-public-2"
            },
            "tags_all": {
              "Name": "my-firs-tf-vpc-public-2"
            },
            "vpc_id": "vpc-0ad5bd20a86dc04e6"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:825765392239:vpc/vpc-0ad5bd20a86dc04e6",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-046635b87b242d5ea",
            "default_route_table_id": "rtb-0507a05b46679a3e9",
            "default_security_group_id": "sg-00222bf66511633d6",
            "dhcp_options_id": "dopt-0418f86d41c448238",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0ad5bd20a86dc04e6",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0507a05b46679a3e9",
            "owner_id": "825765392239",
            "tags": {
              "Name": "my-firs-tf-vpc"
            },
            "tags_all": {
              "Name": "my-firs-tf-vpc"
            }
          }
        }
      ]
    }
  ]
}